// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Post /> should render a post 1`] = `
<article>
  <h4>
    <a
      href="/hello-world"
      onClick={[Function]}
    >
      Hello world!
    </a>
  </h4>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
",
      }
    }
  />
</article>
`;

exports[`<Post /> should render a post with a plain title when isSingle prop is passed 1`] = `
<article>
  <h4>
    Hello world!
  </h4>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
",
      }
    }
  />
</article>
`;
